[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://system/menus/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://system/menus/menu_submenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://system/sfx/menu_open.ogg" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, 2.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Control" type="Panel"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Control" parent="." instance=ExtResource( 3 )]

[node name="Button" parent="Control/SubMenuUI/Panel/HBoxContainer" index="0"]
margin_right = 60.0

[node name="ResumeButton" type="Button" parent="Control/MarginContainer/MainMenu" index="0"]
margin_right = 576.0
margin_bottom = 35.0
text = "GAME_GENERIC_PAUSE_RESUME"

[node name="LoadGameButton" type="Button" parent="Control/MarginContainer/MainMenu" index="1"]
margin_top = 39.0
margin_right = 576.0
margin_bottom = 74.0
text = "GAME_GENERIC_LOAD_GAME"

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/MainMenu" index="2"]
margin_top = 78.0
margin_right = 576.0
margin_bottom = 153.0
custom_constants/separation = 75

[node name="ExitToMainMenuButton" type="Button" parent="Control/MarginContainer/MainMenu" index="3"]
margin_top = 157.0
margin_right = 576.0
margin_bottom = 192.0
text = "GAME_GENERIC_PAUSE_QUIT_TO_MAIN_MENU"

[node name="PopupPanel" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.0
margin_top = -53.5
margin_right = 237.0
margin_bottom = 53.5
popup_exclusive = true
window_title = "asdadasdsa"
dialog_text = "GAME_GENERIC_CONFIRM_QUIT_TO_MAIN_MENU"

[node name="PauseStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ResumeStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="Control/MarginContainer/MainMenu/ResumeButton" to="." method="_on_game_resumed"]
[connection signal="pressed" from="Control/MarginContainer/MainMenu/ExitToMainMenuButton" to="." method="_on_quit_to_main_menu"]
[connection signal="confirmed" from="PopupPanel" to="." method="quit_to_main_menu"]

[editable path="Control"]
